--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Sudhanshu-khosla-26.github.io/iNoteBook",
   "name": "inotebook",
   "version": "0.1.0",
   "private": true,
